WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
297239
AX: WebKit does not compute a self-referential aria-labelledby correctly in SVG.
https://bugs.webkit.org/show_bug.cgi?id=297239
Summary
AX: WebKit does not compute a self-referential aria-labelledby correctly in SVG.
James Craig
Reported
2025-08-11 14:07:08 PDT
New WPT Accessibility test merged in today that fails in WebKit only. Testname: [aria-labelledby="{[aria-label]} {[xlink:title]} {* > [title]}"] > g PR:
https://github.com/web-platform-tests/wpt/pull/54218
CI Results:
https://wpt.fyi/results/svg-aam/name/comp_labelledby.html?label=pr_head&max-count=1&pr=54218
Final URL of the test will be here after the next aligned test run.
https://wpt.fyi/results/svg-aam/name/comp_labelledby.html
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-08-11 14:07:20 PDT
<
rdar://problem/158072617
>
Tyler Wilcock
Comment 2
2026-01-18 16:52:45 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56801
EWS
Comment 3
2026-01-20 12:08:19 PST
Committed
305896@main
(0b1706ea5580): <
https://commits.webkit.org/305896@main
> Reviewed commits have been landed. Closing PR #56801 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug