AX: WebKit does not compute a self-referential aria-labelledby correctly in SVG. https://bugs.webkit.org/show_bug.cgi?id=297239 rdar://158072617

Reviewed by Joshua Hoffman.

We weren't checking for the SVG title element or attribute in accessibleNameForNode — this commit addresses that,
giving us one more passing WPT.

* LayoutTests/imported/w3c/web-platform-tests/svg-aam/name/comp_labelledby-expected.txt:
* Source/WebCore/accessibility/AccessibilityNodeObject.cpp:
(WebCore::accessibleNameForNode):

Canonical link: https://commits.webkit.org/305896@main